@@ -159,6 +159,7 @@
 #include "openturns/SmoothedUniform.hxx"
 #include "openturns/SquaredNormal.hxx"
 #include "openturns/Student.hxx"
+#include "openturns/StudentCopula.hxx"
 #include "openturns/StudentFunctions.hxx"
 #include "openturns/StudentFactory.hxx"
 #include "openturns/Trapezoidal.hxx"
