@@ -5,6 +5,7 @@
     :include-source: False
 
     import openturns as ot
+    import openturns.experimental as otexp
     from matplotlib import pyplot as plt
     from openturns.viewer import View
     if ot.{{ objname }}().__class__.__name__ == 'EmpiricalBernsteinCopula':
@@ -20,8 +21,10 @@
         R[1, 0] = 0.8
         copula = ot.NormalCopula(R)
     elif ot.{{ objname }}().__class__.__name__ == 'SklarCopula':
-        student = ot.Student(3.0, [1.0]*2, [3.0]*2, ot.CorrelationMatrix(2))
+        student = ot.Student(3.0, [1.0] * 2, [3.0] * 2, ot.CorrelationMatrix(2))
         copula =  ot.SklarCopula(student)
+    elif ot.{{ objname }}().__class__.__name__ == 'StudentCopula':
+        copula = otexp.StudentCopula(3.0, ot.CorrelationMatrix(2))
     else:
         copula = ot.{{ objname }}()
     if copula.getDimension() == 1:
