@@ -237,6 +237,9 @@ Refer to :ref:`copula`.
     :template: Copula.rst_t
     NormalCopula
 
+    :template: class.rst_t
+    experimental.StudentCopula
+
 
 Combining and transforming copulas
 ==================================
